tests/errors/immutable_assignment.orus
fn main() {
    let x: i64 = 5
    x = 6
}
